# codri-client

./: .gitignore  .gitmodules  Ad-Astra III.conf  BUGS.md  CMakeLists.txt  HACKING.md  Log4Qt.properties  TODO  TODO.md
debian/: README  (+12 more)
res/demo_presentation/old_c/: CMakeLists.txt
src/: .gitignore  CMakeLists.txt  Makefile  adastra3-client.pro  applicationinterface.cpp  applicationinterface.h  browser.hpp  client.pro  controller.cpp  controller.h  datamanager.cpp  datamanager.h  logfacility.cpp  logfacility.h  logstream.cpp  logstream.h  main.cpp  mainapplication.cpp  mainapplication.h  networkinterface.cpp  networkinterface.h  platforminterface.cpp  platforminterface.h  qexception.h  qrc_descriptions.cpp  qrc_webpage.cpp  repository.cpp  repository.h  repositoryinterface.cpp  repositoryinterface.h  servicepublisher.cpp  servicepublisher.h  src.pro  userinterface.cpp  userinterface.h  webpage.cpp  webpage.h  webpage.qrc
src/auxiliary/: comparingsignaltransition.cpp  comparingsignaltransition.h  fileutils.cpp  fileutils.h  parameterizedsignaltransition.h  qexception.h
src/controller/: initcontroller.cpp  initcontroller.h
src/demo_presentation/: browser.cpp
src/demo_presentation/old/: b.html  main.xml
src/demo_rpc/: client.pl  main.cpp  server.cpp
src/network/: jsonresource.cpp  jsonresource.h  registrationcontroller.cpp  registrationcontroller.h  resource.cpp  resource.h  serverclient.cpp  serverclient.h  webservicedispatcher.cpp  webservicedispatcher.h
src/networkinterface/: descriptions.qrc  jsonresource.cpp  jsonresource.h  kioskcreator.cpp  kioskcreator.h  registrationcontroller.cpp  registrationcontroller.h  resource.cpp  resource.h  serverclient.cpp  serverclient.h  webservicedispatcher.cpp  webservicedispatcher.h
src/old/: main.c  main.html
src/old_c/: browser.c  browser.h
src/res/: webpages.qrc
src/state/: configuration.cpp  configuration.h  kiosk.cpp  kiosk.h  presentation.cpp  presentation.h
src/user/: webpage.cpp  webpage.h
src/userinterface/: webpage.cpp  webpage.h  webpage.qrc
src/webpage/: debugpage.cpp  debugpage.h  initpage.cpp  initpage.h  initpage.html  messagepage.cpp  messagepage.h
(+155 files in other folders)
